# ZooTycoonCPP

./: CMakeLists.txt  README.md  main.cpp
src/animals/: Animal.h  Bird.h  Mammal.h  Reptile.h
src/zoo/: Enclosure.cpp  Enclosure.h  Zoo.cpp  Zoo.h
